Part3&4/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> world_def function_list_opt agent_def
Rule 2     function_list_opt -> <empty>
Rule 3     function_list_opt -> function_list
Rule 4     function_list -> function_decl
Rule 5     function_decl -> FUNC ID LPAREN param_list_opt RPAREN RETURNS type LBRACE stmt_list RBRACE
Rule 6     param_list_opt -> <empty>
Rule 7     param_list_opt -> param_list
Rule 8     param_list -> param_decl
Rule 9     param_list -> param_decl COMMA param_list
Rule 10    param_decl -> ID
Rule 11    type -> TYPE_INT
Rule 12    type -> TYPE_VOID
Rule 13    world_def -> WORLD ID LBRACE world_body RBRACE
Rule 14    world_body -> world_stmt
Rule 15    world_body -> world_stmt world_body
Rule 16    world_stmt -> SIZE LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON
Rule 17    world_stmt -> ENTRY_DEF LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON
Rule 18    world_stmt -> EXIT_DEF LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON
Rule 19    world_stmt -> OBSTACLE_DEF LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON
Rule 20    world_stmt -> DIRT_DEF LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON
Rule 21    agent_def -> AGENT ID LBRACE stmt_list RBRACE
Rule 22    stmt_list -> stmt
Rule 23    stmt_list -> stmt stmt_list
Rule 24    stmt -> VAR ID ASSIGN expr SEMICOLON
Rule 25    stmt -> ID ASSIGN expr SEMICOLON
Rule 26    stmt -> IF condition THEN stmt_list ELSE stmt_list ENDIF SEMICOLON
Rule 27    stmt -> WHILE condition DO stmt_list ENDWHILE SEMICOLON
Rule 28    stmt -> MOVE SEMICOLON
Rule 29    stmt -> TURN turn_dir SEMICOLON
Rule 30    stmt -> CLEAN SEMICOLON
Rule 31    stmt -> BACKTRACK SEMICOLON
Rule 32    stmt -> REPORT expr SEMICOLON
Rule 33    stmt -> RETURN expr SEMICOLON
Rule 34    stmt -> function_call SEMICOLON
Rule 35    turn_dir -> LEFT
Rule 36    turn_dir -> RIGHT
Rule 37    function_call -> ID LPAREN arg_list_opt RPAREN
Rule 38    arg_list_opt -> <empty>
Rule 39    arg_list_opt -> arg_list
Rule 40    arg_list -> expr
Rule 41    arg_list -> expr COMMA arg_list
Rule 42    condition -> SENSE sense_expr
Rule 43    condition -> NOT condition
Rule 44    condition -> condition AND condition
Rule 45    condition -> condition OR condition
Rule 46    condition -> expr relop expr
Rule 47    condition -> UNVISITED
Rule 48    sense_expr -> DIRT
Rule 49    sense_expr -> OBSTACLE
Rule 50    sense_expr -> EXIT
Rule 51    sense_expr -> ENTRY
Rule 52    relop -> EQ
Rule 53    relop -> NEQ
Rule 54    relop -> LT
Rule 55    relop -> GT
Rule 56    expr -> term PLUS expr
Rule 57    expr -> term MINUS expr
Rule 58    expr -> term
Rule 59    term -> ID
Rule 60    term -> INT_LIT
Rule 61    term -> function_call
Rule 62    dir -> N
Rule 63    dir -> E
Rule 64    dir -> S
Rule 65    dir -> W

Terminals, with rules where they appear

AGENT                : 21
AND                  : 44
ASSIGN               : 24 25
BACKTRACK            : 31
CLEAN                : 30
COMMA                : 9 16 17 17 18 18 19 20 41
DIRT                 : 48
DIRT_DEF             : 20
DO                   : 27
E                    : 63
ELSE                 : 26
ENDIF                : 26
ENDWHILE             : 27
ENTRY                : 51
ENTRY_DEF            : 17
EQ                   : 52
EXIT                 : 50
EXIT_DEF             : 18
FUNC                 : 5
GT                   : 55
ID                   : 5 10 13 21 24 25 37 59
IF                   : 26
INT_LIT              : 16 16 17 17 18 18 19 19 20 20 60
LBRACE               : 5 13 21
LEFT                 : 35
LPAREN               : 5 16 17 18 19 20 37
LT                   : 54
MINUS                : 57
MOVE                 : 28
N                    : 62
NEQ                  : 53
NOT                  : 43
OBSTACLE             : 49
OBSTACLE_DEF         : 19
OR                   : 45
PLUS                 : 56
RBRACE               : 5 13 21
REPORT               : 32
RETURN               : 33
RETURNS              : 5
RIGHT                : 36
RPAREN               : 5 16 17 18 19 20 37
S                    : 64
SEMICOLON            : 16 17 18 19 20 24 25 26 27 28 29 30 31 32 33 34
SENSE                : 42
SIZE                 : 16
THEN                 : 26
TURN                 : 29
TYPE_INT             : 11
TYPE_VOID            : 12
UNVISITED            : 47
VAR                  : 24
W                    : 65
WHILE                : 27
WORLD                : 13
error                : 

Nonterminals, with rules where they appear

agent_def            : 1
arg_list             : 39 41
arg_list_opt         : 37
condition            : 26 27 43 44 44 45 45
dir                  : 17 18
expr                 : 24 25 32 33 40 41 46 46 56 57
function_call        : 34 61
function_decl        : 4
function_list        : 3
function_list_opt    : 1
param_decl           : 8 9
param_list           : 7 9
param_list_opt       : 5
program              : 0
relop                : 46
sense_expr           : 42
stmt                 : 22 23
stmt_list            : 5 21 23 26 26 27
term                 : 56 57 58
turn_dir             : 29
type                 : 5
world_body           : 13 15
world_def            : 1
world_stmt           : 14 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . world_def function_list_opt agent_def
    (13) world_def -> . WORLD ID LBRACE world_body RBRACE

    WORLD           shift and go to state 3

    program                        shift and go to state 1
    world_def                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> world_def . function_list_opt agent_def
    (2) function_list_opt -> .
    (3) function_list_opt -> . function_list
    (4) function_list -> . function_decl
    (5) function_decl -> . FUNC ID LPAREN param_list_opt RPAREN RETURNS type LBRACE stmt_list RBRACE

    AGENT           reduce using rule 2 (function_list_opt -> .)
    FUNC            shift and go to state 7

    function_list_opt              shift and go to state 4
    function_list                  shift and go to state 5
    function_decl                  shift and go to state 6

state 3

    (13) world_def -> WORLD . ID LBRACE world_body RBRACE

    ID              shift and go to state 8


state 4

    (1) program -> world_def function_list_opt . agent_def
    (21) agent_def -> . AGENT ID LBRACE stmt_list RBRACE

    AGENT           shift and go to state 10

    agent_def                      shift and go to state 9

state 5

    (3) function_list_opt -> function_list .

    AGENT           reduce using rule 3 (function_list_opt -> function_list .)


state 6

    (4) function_list -> function_decl .

    AGENT           reduce using rule 4 (function_list -> function_decl .)


state 7

    (5) function_decl -> FUNC . ID LPAREN param_list_opt RPAREN RETURNS type LBRACE stmt_list RBRACE

    ID              shift and go to state 11


state 8

    (13) world_def -> WORLD ID . LBRACE world_body RBRACE

    LBRACE          shift and go to state 12


state 9

    (1) program -> world_def function_list_opt agent_def .

    $end            reduce using rule 1 (program -> world_def function_list_opt agent_def .)


state 10

    (21) agent_def -> AGENT . ID LBRACE stmt_list RBRACE

    ID              shift and go to state 13


state 11

    (5) function_decl -> FUNC ID . LPAREN param_list_opt RPAREN RETURNS type LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 14


state 12

    (13) world_def -> WORLD ID LBRACE . world_body RBRACE
    (14) world_body -> . world_stmt
    (15) world_body -> . world_stmt world_body
    (16) world_stmt -> . SIZE LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON
    (17) world_stmt -> . ENTRY_DEF LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON
    (18) world_stmt -> . EXIT_DEF LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON
    (19) world_stmt -> . OBSTACLE_DEF LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON
    (20) world_stmt -> . DIRT_DEF LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    SIZE            shift and go to state 17
    ENTRY_DEF       shift and go to state 18
    EXIT_DEF        shift and go to state 19
    OBSTACLE_DEF    shift and go to state 20
    DIRT_DEF        shift and go to state 21

    world_body                     shift and go to state 15
    world_stmt                     shift and go to state 16

state 13

    (21) agent_def -> AGENT ID . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 22


state 14

    (5) function_decl -> FUNC ID LPAREN . param_list_opt RPAREN RETURNS type LBRACE stmt_list RBRACE
    (6) param_list_opt -> .
    (7) param_list_opt -> . param_list
    (8) param_list -> . param_decl
    (9) param_list -> . param_decl COMMA param_list
    (10) param_decl -> . ID

    RPAREN          reduce using rule 6 (param_list_opt -> .)
    ID              shift and go to state 23

    param_list_opt                 shift and go to state 24
    param_list                     shift and go to state 25
    param_decl                     shift and go to state 26

state 15

    (13) world_def -> WORLD ID LBRACE world_body . RBRACE

    RBRACE          shift and go to state 27


state 16

    (14) world_body -> world_stmt .
    (15) world_body -> world_stmt . world_body
    (14) world_body -> . world_stmt
    (15) world_body -> . world_stmt world_body
    (16) world_stmt -> . SIZE LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON
    (17) world_stmt -> . ENTRY_DEF LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON
    (18) world_stmt -> . EXIT_DEF LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON
    (19) world_stmt -> . OBSTACLE_DEF LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON
    (20) world_stmt -> . DIRT_DEF LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    RBRACE          reduce using rule 14 (world_body -> world_stmt .)
    SIZE            shift and go to state 17
    ENTRY_DEF       shift and go to state 18
    EXIT_DEF        shift and go to state 19
    OBSTACLE_DEF    shift and go to state 20
    DIRT_DEF        shift and go to state 21

    world_stmt                     shift and go to state 16
    world_body                     shift and go to state 28

state 17

    (16) world_stmt -> SIZE . LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    LPAREN          shift and go to state 29


state 18

    (17) world_stmt -> ENTRY_DEF . LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON

    LPAREN          shift and go to state 30


state 19

    (18) world_stmt -> EXIT_DEF . LPAREN INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON

    LPAREN          shift and go to state 31


state 20

    (19) world_stmt -> OBSTACLE_DEF . LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    LPAREN          shift and go to state 32


state 21

    (20) world_stmt -> DIRT_DEF . LPAREN INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    LPAREN          shift and go to state 33


state 22

    (21) agent_def -> AGENT ID LBRACE . stmt_list RBRACE
    (22) stmt_list -> . stmt
    (23) stmt_list -> . stmt stmt_list
    (24) stmt -> . VAR ID ASSIGN expr SEMICOLON
    (25) stmt -> . ID ASSIGN expr SEMICOLON
    (26) stmt -> . IF condition THEN stmt_list ELSE stmt_list ENDIF SEMICOLON
    (27) stmt -> . WHILE condition DO stmt_list ENDWHILE SEMICOLON
    (28) stmt -> . MOVE SEMICOLON
    (29) stmt -> . TURN turn_dir SEMICOLON
    (30) stmt -> . CLEAN SEMICOLON
    (31) stmt -> . BACKTRACK SEMICOLON
    (32) stmt -> . REPORT expr SEMICOLON
    (33) stmt -> . RETURN expr SEMICOLON
    (34) stmt -> . function_call SEMICOLON
    (37) function_call -> . ID LPAREN arg_list_opt RPAREN

    VAR             shift and go to state 37
    ID              shift and go to state 34
    IF              shift and go to state 38
    WHILE           shift and go to state 39
    MOVE            shift and go to state 40
    TURN            shift and go to state 41
    CLEAN           shift and go to state 42
    BACKTRACK       shift and go to state 43
    REPORT          shift and go to state 44
    RETURN          shift and go to state 45

    stmt_list                      shift and go to state 35
    stmt                           shift and go to state 36
    function_call                  shift and go to state 46

state 23

    (10) param_decl -> ID .

    COMMA           reduce using rule 10 (param_decl -> ID .)
    RPAREN          reduce using rule 10 (param_decl -> ID .)


state 24

    (5) function_decl -> FUNC ID LPAREN param_list_opt . RPAREN RETURNS type LBRACE stmt_list RBRACE

    RPAREN          shift and go to state 47


state 25

    (7) param_list_opt -> param_list .

    RPAREN          reduce using rule 7 (param_list_opt -> param_list .)


state 26

    (8) param_list -> param_decl .
    (9) param_list -> param_decl . COMMA param_list

    RPAREN          reduce using rule 8 (param_list -> param_decl .)
    COMMA           shift and go to state 48


state 27

    (13) world_def -> WORLD ID LBRACE world_body RBRACE .

    FUNC            reduce using rule 13 (world_def -> WORLD ID LBRACE world_body RBRACE .)
    AGENT           reduce using rule 13 (world_def -> WORLD ID LBRACE world_body RBRACE .)


state 28

    (15) world_body -> world_stmt world_body .

    RBRACE          reduce using rule 15 (world_body -> world_stmt world_body .)


state 29

    (16) world_stmt -> SIZE LPAREN . INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    INT_LIT         shift and go to state 49


state 30

    (17) world_stmt -> ENTRY_DEF LPAREN . INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON

    INT_LIT         shift and go to state 50


state 31

    (18) world_stmt -> EXIT_DEF LPAREN . INT_LIT COMMA INT_LIT COMMA dir RPAREN SEMICOLON

    INT_LIT         shift and go to state 51


state 32

    (19) world_stmt -> OBSTACLE_DEF LPAREN . INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    INT_LIT         shift and go to state 52


state 33

    (20) world_stmt -> DIRT_DEF LPAREN . INT_LIT COMMA INT_LIT RPAREN SEMICOLON

    INT_LIT         shift and go to state 53


state 34

    (25) stmt -> ID . ASSIGN expr SEMICOLON
    (37) function_call -> ID . LPAREN arg_list_opt RPAREN

    ASSIGN          shift and go to state 54
    LPAREN          shift and go to state 55


state 35

    (21) agent_def -> AGENT ID LBRACE stmt_list . RBRACE

    RBRACE          shift and go to state 56


state 36

    (22) stmt_list -> stmt .
    (23) stmt_list -> stmt . stmt_list
    (22) stmt_list -> . stmt
    (23) stmt_list -> . stmt stmt_list
    (24) stmt -> . VAR ID ASSIGN expr SEMICOLON
    (25) stmt -> . ID ASSIGN expr SEMICOLON
    (26) stmt -> . IF condition THEN stmt_list ELSE stmt_list ENDIF SEMICOLON
    (27) stmt -> . WHILE condition DO stmt_list ENDWHILE SEMICOLON
    (28) stmt -> . MOVE SEMICOLON
    (29) stmt -> . TURN turn_dir SEMICOLON
    (30) stmt -> . CLEAN SEMICOLON
    (31) stmt -> . BACKTRACK SEMICOLON
    (32) stmt -> . REPORT expr SEMICOLON
    (33) stmt -> . RETURN expr SEMICOLON
    (34) stmt -> . function_call SEMICOLON
    (37) function_call -> . ID LPAREN arg_list_opt RPAREN

    RBRACE          reduce using rule 22 (stmt_list -> stmt .)
    ELSE            reduce using rule 22 (stmt_list -> stmt .)
    ENDWHILE        reduce using rule 22 (stmt_list -> stmt .)
    ENDIF           reduce using rule 22 (stmt_list -> stmt .)
    VAR             shift and go to state 37
    ID              shift and go to state 34
    IF              shift and go to state 38
    WHILE           shift and go to state 39
    MOVE            shift and go to state 40
    TURN            shift and go to state 41
    CLEAN           shift and go to state 42
    BACKTRACK       shift and go to state 43
    REPORT          shift and go to state 44
    RETURN          shift and go to state 45

    stmt                           shift and go to state 36
    stmt_list                      shift and go to state 57
    function_call                  shift and go to state 46

state 37

    (24) stmt -> VAR . ID ASSIGN expr SEMICOLON

    ID              shift and go to state 58


state 38

    (26) stmt -> IF . condition THEN stmt_list ELSE stmt_list ENDIF SEMICOLON
    (42) condition -> . SENSE sense_expr
    (43) condition -> . NOT condition
    (44) condition -> . condition AND condition
    (45) condition -> . condition OR condition
    (46) condition -> . expr relop expr
    (47) condition -> . UNVISITED
    (56) expr -> . term PLUS expr
    (57) expr -> . term MINUS expr
    (58) expr -> . term
    (59) term -> . ID
    (60) term -> . INT_LIT
    (61) term -> . function_call
    (37) function_call -> . ID LPAREN arg_list_opt RPAREN

    SENSE           shift and go to state 60
    NOT             shift and go to state 61
    UNVISITED       shift and go to state 63
    ID              shift and go to state 65
    INT_LIT         shift and go to state 66

    condition                      shift and go to state 59
    expr                           shift and go to state 62
    term                           shift and go to state 64
    function_call                  shift and go to state 67

state 39

    (27) stmt -> WHILE . condition DO stmt_list ENDWHILE SEMICOLON
    (42) condition -> . SENSE sense_expr
    (43) condition -> . NOT condition
    (44) condition -> . condition AND condition
    (45) condition -> . condition OR condition
    (46) condition -> . expr relop expr
    (47) condition -> . UNVISITED
    (56) expr -> . term PLUS expr
    (57) expr -> . term MINUS expr
    (58) expr -> . term
    (59) term -> . ID
    (60) term -> . INT_LIT
    (61) term -> . function_call
    (37) function_call -> . ID LPAREN arg_list_opt RPAREN

    SENSE           shift and go to state 60
    NOT             shift and go to state 61
    UNVISITED       shift and go to state 63
    ID              shift and go to state 65
    INT_LIT         shift and go to state 66

    condition                      shift and go to state 68
    expr                           shift and go to state 62
    term                           shift and go to state 64
    function_call                  shift and go to state 67

state 40

    (28) stmt -> MOVE . SEMICOLON

    SEMICOLON       shift and go to state 69


state 41

    (29) stmt -> TURN . turn_dir SEMICOLON
    (35) turn_dir -> . LEFT
    (36) turn_dir -> . RIGHT

    LEFT            shift and go to state 71
    RIGHT           shift and go to state 72

    turn_dir                       shift and go to state 70

state 42

    (30) stmt -> CLEAN . SEMICOLON

    SEMICOLON       shift and go to state 73


state 43

    (31) stmt -> BACKTRACK . SEMICOLON

    SEMICOLON       shift and go to state 74


state 44

    (32) stmt -> REPORT . expr SEMICOLON
    (56) expr -> . term PLUS expr
    (57) expr -> . term MINUS expr
    (58) expr -> . term
    (59) term -> . ID
    (60) term -> . INT_LIT
    (61) term -> . function_call
    (37) function_call -> . ID LPAREN arg_list_opt RPAREN

    ID              shift and go to state 65
    INT_LIT         shift and go to state 66

    expr                           shift and go to state 75
    term                           shift and go to state 64
    function_call                  shift and go to state 67

state 45
